# waterbot

./: .gitignore  CMakeLists.txt  README.md  WaterBot.ini
Service/: waterbot.service
Source/: WaterBot.cpp  WaterBot.h
Source/AnalogInterface/: AnalogDeviceInterface.h  AnalogInterface.cpp  AnalogInterface.h
Source/AnalogInterface/Adapters/: Mcp3008.cpp  Mcp3008.h
Source/Config/: Config.cpp  Config.h
Source/DeviceInterface/: DeviceInterface.h
Source/Http/: Http.cpp  Http.h
Source/Plant/: Plant.cpp  Plant.h
Source/ThermometerInterface/: ThermometerDeviceInterface.h  ThermometerInterface.cpp  ThermometerInterface.h
Source/ThermometerInterface/Adapters/: Dht22.cpp  Dht22.h
Source/Utils/: Utils.h
Source/Utils/Ini/: ini.c  ini.h
Source/Utils/Input/: InputParser.h
Source/Utils/Log/: loguru.h
Source/Utils/restclient-cpp/: connection.cc  connection.h  helpers.h  restclient.cc
